UPDATED: fixed the footer align problem

--- a/style.css
+++ b/style.css
@@ -134,4 +134,14 @@ footer {
     #getBtn {
         margin-bottom: 20px;
     }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: rgb(42, 42, 42);
+        color: white;
+        padding: 50px;
+        font-size: 1.2rem;
+      }
   }
